[build-system]
requires = [
    'flit_core>=3.7',
]
build-backend = 'flit_core.buildapi'

[project]
name = 'sphinx-alice-theme'
description = 'Provides the Alice theme for Sphinx projects.'
authors = [
    {name = 'James Knight', email = 'james.d.knight@live.com'},
]
requires-python = '>=3.9'
readme = 'README.md'
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Framework :: Sphinx :: Theme',
    'Framework :: Sphinx',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Documentation :: Sphinx',
    'Topic :: Documentation',
]
dependencies = [
    'sphinx>=7.0',
]
dynamic = [
    'version',
]

[project.urls]
Documentation = 'https://sphinx-alice-theme.jdknight.me/'
Download = 'https://pypi.org/project/sphinx-alice-theme'
Source = 'https://github.com/jdknight/sphinx-alice-theme'

[project.entry-points]
'sphinx.html_themes' = {sphinx_alice_theme = 'sphinx_alice_theme'}

[tool.flit.module]
name = 'sphinx_alice_theme'

[tool.flit.sdist]
include = [
    'licenses.d/',
    'LICENSE',
]
